<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.text_to_speech.fragment.TextToSpeechFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="16dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <!-- Language Spinner -->
                <Spinner
                    android:id="@+id/spinner_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/spinner_background"
                    android:spinnerMode="dropdown" />

                <!-- EditText for input text -->
                <EditText
                    android:id="@+id/edit_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edit_text_purple_border"
                    android:gravity="top|start"
                    android:hint="@string/enter_text_hint"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:padding="10dp" />

                <!-- Buttons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_play"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:backgroundTint="@color/button_color"
                        android:text="@string/play" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_text_to_audio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:text="@string/text_to_audio" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        android:gravity="center"
        android:visibility="gone"
        android:elevation="10dp">

        <ProgressBar
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"/>
    </FrameLayout>
</FrameLayout>