<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.home_voice.HomeVoiceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:orientation="vertical"
        android:padding="16dp">

<!--        <TextView-->
<!--            android:id="@+id/title"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:padding="8dp"-->
<!--            android:text="@string/app_name"-->
<!--            android:textColor="#320099"-->
<!--            android:textSize="26sp"-->
<!--            android:textStyle="bold" />-->


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageMain"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/main_image_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/image_home_2"
            app:shapeAppearanceOverlay="@style/RoundedImageStyle" />


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:columnCount="2"
            android:rowCount="2">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardRecord"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#5C6BC0"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/record_audio"
                        android:src="@drawable/ic_mic_100px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/record_audio"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardOpenFile"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#FFB74D"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic__folder_100px"
                        android:contentDescription="@string/open_audio" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/open_audio"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardTextToSpeech"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="#4DB6AC"
                android:layout_margin="8dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_speech_text_100px"
                        android:contentDescription="@string/text_to_speech" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/text_to_speech"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardMyVoice"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="8dp"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="#BA68C8"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_music_100px"
                        android:contentDescription="@string/my_voice" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/my_voice"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </GridLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111" />

    </LinearLayout>

</FrameLayout>